Tue Apr  7 10:27:50 MET DST 1998 hannes
        * fixed scanner bug: ignoring { and } in <block> (scanner.l)

1998-04-06  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* spSpolyLoop.h: neww calling interface for spGetSpolyLoop

	* kstd1.cc (kNF): moved strat->ak field initailization out of
	initBuchMora into single routines

	* febase.cc (feGetSearchPath): added feGetSearchPath; changed
	algorithm for searching files: $SINGULARPATH -> relative to
	executable -> burnt-in locations
	* added find_exec.c to get absolute pathname of executable

Mon Apr  6 14:23:52 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

	* claptmpl.cc: instantiation for `tabs()' added

Sat Apr  4 00:52:58 MET DST 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
	* iplib.cc libparse.cc libparse.h libparse.l misc.cc LIB/*.lib
	  Changed help for libraries.
	
Wed Apr  1 20:55:15 MET DST 1998 hannes
	* mpsr_Tok.cc,tok.h: minor fix, removed VERBOSE_CMD
	* iparith.cc ipconv.cc: added conversion list <-> resolution
	* lists.cc, syz1.cc : fixed bug in conversion (list<->res.):
	  handling "empty" case
	* scanner.l: added option: %option always-interactive  

Tue Mar 31 10:47:06 MET DST 1998 hannes
        * feread.cc: fixed handling of empty history
	* clapsing.cc: fixed gcd(0,..) and gcd(..,0) -> pOne()
	* febase.h/febase.inc: renaming of scanner variables
	  ( yy_blocklineno, yy_noeof)
	* febase.inc: increased speed in feReadLine
	* minor changes in scanner/grammar/iparith.cc (example)

1998-03-27  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* longalg.cc (naDBTest): fixed lines for number tests

	* added spSpolyLoop.inc to repository

	* algmap.cc (maAlgpolyMap): fixed bug which changed preimage

1998-03-23  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* taged version 1.1.7 -- unconditional fast version

	* polys-impl.cc, polys.cc: No COMP_FAST any more

	* Makefile.in: Introduced variable PERL, set by configure

	* kstdfac.cc (kStratCopy): kModW iv is not copied, but just the